Updated the isBlank() method to use StringUtils.isBlank() to support the correct java version. Updated old tests to lose the inex paramter for createPerson().